Updated menu structure with a new top navigation menu to toggle between different views. Some minor update to icons and merged help and about page.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
   <div id="statusbar"></div>
 	<header class="cf">
 		<span class="topnav topnav-left icon-question"></span>
-    <span class="topnav topnav-right icon-info"></span>
+    <span class="topnav topnav-right icon-menu"></span>
+    <div id="topmenu">
+      <ul>
+        <li class="botnav-active" title="Comparison">Comparison</li>
+        <li title="Maximize">Maximize Profit</li>
+        <li title="Minimize">Minimize Cost</li>
+        <li title="Optimize">Optimize Volume</li>
+      </ul>
+    </div>
+
 
 		<h1><img src="berry.png"> Comberry</h1>
 	</header>
@@ -93,8 +102,6 @@
       </p>
       <p>Use the "Help" button on the top left corner to access this help page.</p>
       <p>Use the "Info" button on the top right corner to learn more about Comberry and who made it.</p>
-    </div>
-    <div id="about">
       <h3>About Comberry</h3>
       <p>The goal of Comberry is to quickly evaluate which trading items are more profitable than others and thus worthwhile investing in over others.</p>
       <p>The Comberry App was designed to compare different products or services for trade in an easy way. That means the products or services it compares must have a cost (in business usually referred to as the purchase or acquisition price) and will generate a certain revenue (sometimes in business also referred to as income or yield). Comberry will automatically deduct the cost from the revenue in order to determine the profit of any given item. The user can calculate the total cost, revenue and profit by specifying the volume in units for every item.</p>
