Implented getChartString method to plot meaningful charttitle Update to view controller

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</header>
 	<div id="main">
     
-    <h2 id="chartTitle">Title of Chart</h2>
+    <h2 id="chartTitle"></h2>
     <div id="result">
       <canvas id="resultChart"></canvas>
     </div>
