Implemented numbers formatting in the chart title strings Improved formatting of title strings with <strong> tags Included a new numFor.js which takes care of number formatting via numFor class

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
   </footer>
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="js/Chart.min.js"></script>
+<script type="text/javascript" src="js/numFor.js"></script>
 <script type="text/javascript" src="js/comberry.js"></script>
 <script type='application/javascript' src="js/fastclick.js"></script>
 <script type="text/javascript">
