Adapted the topmenu to show reduced items when less than 2 brands are loaded included a couple of hacks to make the topmenu switching back to reduced when deleteing brands -- controller needs clean-up, is not DRY anymore

--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
       <ul>
         <li class="botnav-active" title="Comparison">Comparison</li>
         <li title="SideBySide">Side by Side</li>
+        <div id="reduced-topmenu">
+          <li title="reduced-topmenu-message">Please add 2 or more items to see more options!</li>
+        </div>
+        <div id="full-topmenu">
         <li title="Maximize">Maximize Profit</li>
         <li title="Minimize">Minimize Cost</li>
         <li title="Optimize">Optimize Volume</li>
+        </div>
       </ul>
     </div>
 
