Removed all type/number from the input fields to prevent error from fastlick.js Also updated css at one point selecting the top input in bubble via placeholder rather than type text

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
               <input class="focussed" type="text" placeholder="Name"><!--
             --></label>
             <label>
-              <span>Volume in units: </span><input type="number">
+              <span>Volume in units: </span><input type="text">
             </label>
             <label>
-              <span>Cost per unit: </span><input type="number">
+              <span>Cost per unit: </span><input type="text">
             </label>
             <label>
-              <span>Revenue per unit: </span><input type="number">
+              <span>Revenue per unit: </span><input type="text">
             </label>
             <input type="submit" class="btn-long" id="createInputBlock" value="Create!">
           </div>
@@ -67,7 +67,7 @@
         <div class="bubble bubble-short">
           <div id="change-volume-block" class="form">
             <label>
-              <span>Volume in units: </span><input class="focussed" type="number">
+              <span>Volume in units: </span><input class="focussed" type="text">
             </label>
             <input type="submit" class="btn-long" id="changeVolumeBlock" value="Change!">
           </div>
