--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
     </ul>
   </footer>
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="js/jquery.number.min.js"></script>
 <script type="text/javascript" src="js/Chart.min.js"></script>
-<script type="text/javascript" src="js/numFor.js"></script>
 <script type="text/javascript" src="js/comberry.js"></script>
 <script type='application/javascript' src="js/fastclick.js"></script>
 <script type="text/javascript">
